@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- In unittest, using a skipping decorator on a class is now equivalent to
+  skipping every test on the class.  The ClassTestSuite class has been removed.
+
 - Issue #6050: Don't fail extracting a directory from a zipfile if
   the directory already exists.
 
